// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector renders buttons with expected text and classNames 1`] = `
<Popover
  arrowPointAtCenter={true}
  content={
    Array [
      <button
        className="HopsSelector--Selector decrement"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        -
      </button>,
      <button
        className="HopsSelector--Selector--btn full popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        0
      </button>,
      <button
        className="HopsSelector--Selector--btn partial popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        1
      </button>,
      <button
        className="HopsSelector--Selector--btn full popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        2
      </button>,
      <button
        className="HopsSelector--Selector--btn empty popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        3
      </button>,
      <button
        className="HopsSelector--Selector--btn empty popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        4
      </button>,
      <button
        className="HopsSelector--Selector increment"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        +
      </button>,
    ]
  }
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottom"
  prefixCls="ant-popover"
  title="Visible downstream hops"
  transitionName="zoom-big"
  trigger="hover"
>
  <span
    className="HopsSelector--Selector"
  >
    <FaSortAmountAsc
      className="HopsSelector--Selector--AscIcon Down"
    />
     
    Downstream hops
     
    <button
      className="HopsSelector--Selector--btn full furthest"
      key="2 1 furthest"
      onClick={[Function]}
      type="button"
    >
       
      2
    </button>
     /
     
    <button
      className="HopsSelector--Selector--btn empty delimiter"
      key="4 1 delimiter"
      onClick={[Function]}
      type="button"
    >
       
      4
    </button>
     
    <IoChevronDown
      className="HopsSelector--Selector--ChevronDown"
    />
  </span>
</Popover>
`;

exports[`Selector renders message when there are no options 1`] = `
<span
  className="HopsSelector--Selector"
>
  No 
  upstream hops
</span>
`;

exports[`Selector renders upstream hops with negative distance correctly 1`] = `
<Popover
  arrowPointAtCenter={true}
  content={
    Array [
      <button
        className="HopsSelector--Selector decrement"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        -
      </button>,
      <button
        className="HopsSelector--Selector--btn full popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        0
      </button>,
      <button
        className="HopsSelector--Selector--btn partial popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        1
      </button>,
      <button
        className="HopsSelector--Selector--btn full popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        2
      </button>,
      <button
        className="HopsSelector--Selector--btn empty popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        3
      </button>,
      <button
        className="HopsSelector--Selector--btn empty popover-content"
        onClick={[Function]}
        type="button"
      >
        <IoChevronRight
          className="HopsSelector--Selector--ChevronRight"
        />
         
        4
      </button>,
      <button
        className="HopsSelector--Selector increment"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        +
      </button>,
    ]
  }
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottom"
  prefixCls="ant-popover"
  title="Visible upstream hops"
  transitionName="zoom-big"
  trigger="hover"
>
  <span
    className="HopsSelector--Selector"
  >
    <FaSortAmountAsc
      className="HopsSelector--Selector--AscIcon Up"
    />
     
    Upstream hops
     
    <button
      className="HopsSelector--Selector--btn full furthest"
      key="-2 -1 furthest"
      onClick={[Function]}
      type="button"
    >
       
      2
    </button>
     /
     
    <button
      className="HopsSelector--Selector--btn empty delimiter"
      key="-4 -1 delimiter"
      onClick={[Function]}
      type="button"
    >
       
      4
    </button>
     
    <IoChevronDown
      className="HopsSelector--Selector--ChevronDown"
    />
  </span>
</Popover>
`;
